--- a/templates/index2.html
+++ b/templates/index2.html
@@ -12,10 +12,14 @@
   </head>
   <body>
     <div class="container">
+      <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center" style="background-image: url(https://marshemispheres.com/images/full.jpg);">
         <h1>Mission to Mars</h1>
+        <!-- Add a button to activate scraping script -->
         <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
+
+      <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12 text-center">
           <div class="media">
@@ -27,9 +31,13 @@
           </div>
         </div>
       </div>
+
+      <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
           <h2>Featured Mars Image</h2>
+
+          <!-- if images is False/None/non-existent, then default to error message -->
           <img 
             src="{{mars.featured_image | default('static/images/error.png', true) }}"
             class="img-responsive"
@@ -44,6 +52,8 @@
            </div>  
         </div>
       </div> 
+
+      <!-- Section for Mars Hemispheres -->
       
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
